<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">distcc</string>
	<string name="app_desc">Client for distributed compiling...</string>

	<string name="menu_options">Options</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_toggle">Start</string>
	<string name="menu_forcestop">Force Stop</string>
	<string name="menu_install">Install</string>
	<string name="menu_remove">Uninstall</string>

	<string name="pref_cat_debian">Debian</string>
	<string name="pref_cat_master">Master</string>

	<string name="pref_targetDebian">Target Directory</string>
	<string name="pref_targetDebian_d">/debian</string>


	<string name="pref_masterIP">IP</string>
	<string name="pref_masterIP_d">localhost</string>

	<string name="pref_masterPort">Port</string>
	<string name="pref_masterPort_d">8855</string>

</resources>
