<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_toggle"
			android:icon="@drawable/owl_negative"
			android:title="@string/menu_toggle"
			android:showAsAction="always"/>
	<item android:id="@+id/menu_options"
			android:icon="@android:drawable/ic_menu_preferences"
			android:title="@string/menu_options"
			android:showAsAction="ifRoom"/>

	<item android:id="@+id/menu_install"
			android:title="@string/menu_install"
			android:showAsAction="never"/>

	<item android:id="@+id/menu_remove"
			android:title="@string/menu_remove"
			android:showAsAction="never"/>

	<item android:id="@+id/menu_forcestop"
			android:title="@string/menu_forcestop"
			android:showAsAction="never"/>

	<item android:id="@+id/menu_exit"
			android:icon="@android:drawable/ic_menu_close_clear_cancel"
			android:title="@string/menu_exit"
			android:showAsAction="never"/>

</menu>